# alex-ai_researcher

./: .env.example  .gitignore  STANDALONE_GIT.md
.github/: README.md
.github/workflows/: deploy.yml  destroy.yml
backend/: deploy_all_lambdas.py
backend/agent_llm/: pyproject.toml
backend/agent_llm/alex_agent_llm/: __init__.py  config.py
backend/api/: main.py  package_docker.py
backend/charter/: agent.py  lambda_handler.py  package_docker.py  pyproject.toml  test_simple.py
backend/planner/: agent.py  lambda_handler.py  package_docker.py  pyproject.toml  run_planner_job.py  test_full.py
backend/reporter/: agent.py  judge.py  lambda_handler.py  package_docker.py  pyproject.toml  test_simple.py
backend/researcher/: Dockerfile  context.py  deploy.py  mcp_servers.py  playwright-mcp.config.json  pyproject.toml  server.py  test_local.py  test_research.py  tools.py
backend/retirement/: agent.py  lambda_handler.py  package_docker.py  pyproject.toml  test_simple.py
backend/tagger/: agent.py  package_docker.py  pyproject.toml
frontend/lib/: config.ts
frontend/pages/: dashboard.tsx
scripts/: deploy.py  destroy.sh  destroy_alex_stacks.sh  run_local.py
terraform/: README.md
terraform/2_sagemaker/: .terraform.lock.hcl
terraform/4_researcher/: main.tf  terraform.tfvars.example  variables.tf
terraform/5_database/: .terraform.lock.hcl  main.tf
terraform/6_agents/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/7_frontend/: main.tf  variables.tf
terraform/8_enterprise/: main.tf  outputs.tf  terraform.tfvars.example
(+5 files in other folders)
