[project]
name = "reporter"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alex-agent-llm",
    "alex-database",
    "boto3>=1.40.9",
    "langfuse>=3.3.4",
    "openai-agents>=0.3.0",
    "pydantic>=2.11.7",
    "pydantic-ai>=1.0.6",
    "python-dotenv>=1.1.1",
    "tenacity>=9.1.2",
]

[tool.uv.sources]
alex-agent-llm = { path = "../agent_llm", editable = true }
alex-database = { path = "../database", editable = true }
